# CG-openGL-programs

./: README.md
CLion_OpenGL-Template/: CMakeLists.txt
